# linkface

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/pc/tingyi/facedoor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/pc/tingyi/facedoor/: MainActivity.java
facedoor/: CMakeLists.txt  build.gradle
facedoor/src/androidTest/java/pc/tingyi/facedoor/: ExampleInstrumentedTest.java
facedoor/src/main/: AndroidManifest.xml
facedoor/src/main/java/pc/tingyi/facedoor/: ByteUtils.java  FaceDoor.java
facedoor/src/main/jni/: facedoor.c  linkkit_sample.c
facedoor/src/main/jni/include/: linkkit_export.h  stdio.h
facedoor/src/main/jni/include/imports/: iot_import_dtls.h
facedoor/src/main/res/values/: strings.xml
facedoor/src/test/java/pc/tingyi/facedoor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
